# SiecNeuronowa

./: .gitignore  CMakeLists.txt  Dane.cpp  Dane.h  Losowanie.cpp  Losowanie.h  Neuron.cpp  Neuron.h  README.md  SiecNeuronow.cpp  SiecNeuronow.h  gnuplot - dane do rysowania.txt  main.cpp  pytania.txt  siecneuronowa.exe.stackdump
do_rysowania_punktow_zbiorowKwiatkow/: Iris-setosa2.txt  Iris-versicolor2.txt  Iris-virginica1.txt  Iris-virginica2.txt
headers/: Dane.h  Gnuplot.h  Losowanie.h  Matematyka.h  Menu.h  Neuron.h  SiecNeuronow.h  StrukturyZestaw.h  Testy.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
src/: Dane.cpp  Gnuplot.cpp  Losowanie.cpp  Neuron.cpp  SiecNeuronow.cpp
tests/: testLosowanie.cpp
